--- a/DW_project.ipynb
+++ b/DW_project.ipynb
@@ -995,9 +995,7 @@
     "        .iloc[:num_recommendations, :-1]  # Select the top N recommendations\n",
     "    )\n",
     "\n",
-    "    return user_full, recommendations\n",
-    "\n",
-
+    "    return user_full, recommendations"
    ]
   },
   {
